tests/positive/literals_complex.em
int main() {
char c = 'a';
string s = "hello world";
return 0;
}