tests/negative/literals_complex.em
int main() {
    char c = 'ab';
    string s = "unclosed;
    return 0;
}